--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "ConnectionStrings": {
+    "MainDB": "Server=LAPTOP-N6H6A27I\\SQLEXPRESS;Database=MyCVsite;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
+
+  }
