working code with migartions

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MainDB": "Server=LAPTOP-N6H6A27I\\SQLEXPRESS;Database=MyCVsite;Trusted_Connection=True;TrustServerCertificate=True;"
+    "MainDB": "Server=LAPTOP-N6H6A27I\\SQLEXPRESS;Database=MyCVWeb2;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 
   }
