Added Login controller and token

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,6 +7,16 @@
   },
   "ConnectionStrings": {
     "MainDB": "Server=LAPTOP-N6H6A27I\\SQLEXPRESS;Database=MyCVWeb2;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Authentication": {
+    "Secret": "BJbeCs32ri1h80VkKn7now=j",
+    "Issuer": "https://localhost:7119",
+    "Audience": "MyCVSite"
   }
 
-  }
+}
+// "AllowedHosts": "*"
+
+//the link to generate kye
+//https:
+//generate-random.org/encryption-key-generator
