update28.12.2023-crod as canceled 1. add nuget name crod 2. add to program.cs - line 62-71 and line 21 3. in react project install axios and add to package.json the line (with the port)   "proxy": "http://localhost:7119",

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -11,11 +11,12 @@
   "Authentication": {
     "Secret": "BJbeCs32ri1h80VkKn7now=j",
     "Issuer": "https://localhost:7119",
-    "Audience": "MyCVSite"
+    "Audience": "MyCVSite",
+    "AllowedHosts": "*"
   }
 
 }
-// "AllowedHosts": "*"
+ 
 
 //the link to generate kye
 //https:
